Bug 198987. Prevent smooth scrolling rounding small partial increments down to 0. Add scrollMaxX/scrollMaxY properties to JS window object so mailnews can use a more robust way to detect when the message is scrolled to the bottom of its window. r=bzbarsky,sr=jst