dom/src/base/nsDOMClassInfo.cpp
@@ -883,6 +883,8 @@ jsval nsDOMClassInfo::sOnscroll_id        = JSVAL_VOID;
 jsval nsDOMClassInfo::sScrollIntoView_id  = JSVAL_VOID;
 jsval nsDOMClassInfo::sScrollX_id         = JSVAL_VOID;
 jsval nsDOMClassInfo::sScrollY_id         = JSVAL_VOID;
+jsval nsDOMClassInfo::sScrollMaxX_id      = JSVAL_VOID;
+jsval nsDOMClassInfo::sScrollMaxY_id      = JSVAL_VOID;
 jsval nsDOMClassInfo::sOpen_id            = JSVAL_VOID;
 jsval nsDOMClassInfo::sItem_id            = JSVAL_VOID;
 jsval nsDOMClassInfo::sEnumerate_id       = JSVAL_VOID;
@@ -982,6 +984,8 @@ nsDOMClassInfo::DefineStaticJSVals(JSContext *cx)
   SET_JSVAL_TO_STRING(sScrollIntoView_id,  cx, "scrollIntoView");
   SET_JSVAL_TO_STRING(sScrollX_id,         cx, "scrollX");
   SET_JSVAL_TO_STRING(sScrollY_id,         cx, "scrollY");
+  SET_JSVAL_TO_STRING(sScrollMaxX_id,      cx, "scrollMaxX");
+  SET_JSVAL_TO_STRING(sScrollMaxY_id,      cx, "scrollMaxY");
   SET_JSVAL_TO_STRING(sOpen_id,            cx, "open");
   SET_JSVAL_TO_STRING(sItem_id,            cx, "item");
   SET_JSVAL_TO_STRING(sEnumerate_id,       cx, "enumerateProperties");
@@ -2819,6 +2823,8 @@ nsDOMClassInfo::ShutDown()
   sScrollIntoView_id  = JSVAL_VOID;
   sScrollX_id         = JSVAL_VOID;
   sScrollY_id         = JSVAL_VOID;
+  sScrollMaxX_id      = JSVAL_VOID;
+  sScrollMaxY_id      = JSVAL_VOID;
   sOpen_id            = JSVAL_VOID;
   sItem_id            = JSVAL_VOID;
   sEnumerate_id       = JSVAL_VOID;
